<resources>
    <string name="app_name">Ejemplos Tema 3</string>
    <string name="app_networking">Networking</string>

    <string name="app_service_weather">Servicio Metereológico</string>
    <string name="networking_ejemplo1">En este ejemplo se muestran diferentes formas de conexión a un recurso remoto, como a través de la clase HttpUrlConnection, sockets. Se muestra también la forma de crear tareas asíncronas y un ejemplo de Servicio</string>
    <string name="networking_ejemplo2">Ejemplos de Servicios</string>
    <string name="networking_ejemplo_title2">Service</string>
    <string name="networking_ejemplo_title">Networking</string>
    <string name="menu_startexample">Iniciar ejemplo</string>
    <string name="menu_startservicio1">Servicio básico</string>
    <string name="menu_startservicio2">Servicio del clima</string>
    <string name="action_about">Acerca de...</string>
    <string name="network_url_URL">URL</string>
    <string name="hint_network_url_URL">introduce la url</string>
    <string name="fragment_navigation_connect">Get</string>
    <string name="fragment_navigation_post">Post</string>
    <string name="fragment_navigation_postparams">Datos post</string>
    <string name="fragment_navigation_UsandoHTTP">Usando HTTP</string>
    <string name="fragment_navigation_usandoSockets">Usando Sockets</string>
    <string name="fragment_url_inicio">http://150.214.170.105:80</string>
    <string name="fragment_navigation_startservice">Arrancar servicio</string>
    <string name="panel_listapersonalizada">Lista personalizada</string>
    <string name="network_url_browse">Ir</string>
    <string name="network_url_error">Error en la dirección</string>
    <string name="network_error_conexion">Error de conexión</string>
    <string name="service_weather_startup">Iniciando servicio meteorológico</string>
    <string name="service_weather_stop">Parando servicio meteorológico</string>
    <string name="service_weather_label">Servicio meteorológico</string>
    <string name="service_basic_label">Servicio básico FTP</string>
    <string name="service_weather">Icono de temperatura</string>
    <string name="contentdescription_service_weather">icono del servicio meteorológico</string>

    <string name="service_url">ftp://ftp.ujaen.es/welcome.msg</string>
    <string name="service_descargar">Descargar</string>
    <string name="service_description">Ejemplo de descarga de un recurso con FTP</string>
    <string name="service_descargando">Descargando...</string>
    <string name="dialog_about_title">Acerca de Ejemplos Tema 3</string>
    <string name="app_help">Ayuda</string>
</resources>
