<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/network_label_http"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:text="@string/fragment_navigation_UsandoHTTP"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/network_navigation_button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onConnectHTTP"
            android:text="@string/fragment_navigation_connect" />

        <Button
            android:id="@+id/network_navigation_button_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onConnectHTTPPost"
            android:text="@string/fragment_navigation_post" />

        <EditText
            android:id="@+id/network_navigation_edittext_postparams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fragment_navigation_postparams"
            android:imeOptions="actionDone"
            android:inputType="text">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/network_url_downloadprogress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/network_label_sockets"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:text="@string/fragment_navigation_usandoSockets"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/framentmenu_launchbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onConnectSocket"
            android:text="@string/fragment_navigation_connect" />

    </LinearLayout>

</LinearLayout>